--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "argon-dashboard-nodejs",
   "version": "1.0.1",
+  "engines": { "node": "12.x", "npm": "10.2.4" },
   "private": true,
   "scripts": {
     "pm2": "pm2",
